<resources>
    <string name="app_name">cuencar</string>
    <string name="Perfil">Mi Perfil</string>
    <string name="Reservas">Mis Reservas</string>
    <string name="Alquiler">Alquilar Vehiculo</string>
    <string name="Contactos">Contáctanos</string>
    <string name="bienvenido">Bienvenido a CuenCar</string>
    <string name="Ubicacion">Ubicación</string>
    <string name="FechayHora">Fecha/Hora de Renta</string>
    <string name="FechayHora2">Fecha/Hora de Retorno</string>
    <string name="Mayor18">Tengo mas de 18 años</string>
    <string name="Buscar">Buscar --></string>
    <string name="Emblema">ENCUENTRA EL MEJOR VEHICULO JUNTO A NOSOTROS</string>
    <string name="title_activity_seleccion_ubicacion">SeleccionUbicacion</string>
    <string name="title_activity_ubicacion_gogle_maps">Ubicacion_GogleMaps</string>
    <string name="NombreApp">CuenCar</string>
    <string name="Info">CuenCar es una aplicación de prueba que esta siendo diseñada por estudiantes del ISTA para la materia de Programación de Aplicaciónes Móviles</string>
    <string name="Proposito">Nuestro proprósito es implementar una aplicación movil para el alquiler de vehiculos en la ciudad de Cuenca-Ecuador con el fin de ayudar a extranjeros y locales a escoger un carro segun el tipo de actividad que vayan a realizar.</string>
    <string name="TituloProposito">Propósitos</string>
    <string name="TituloQSomos">¿Quiénes Somos?</string>
    <string name="CorreoLogin">E-mail</string>
    <string name="Contraseña">Password</string>
    <string name="Registrar">Sign in</string>
    <string name="Ingrsar">Login</string>
    <string name="ConGoogle">Sign in with google</string>
    <string name="col4" />
    <string name="col21" />
    <string name="col5" />
    <string name="row11N1ame" />
    <string name="row1Age" />
    <string name="row1Surname" />
    <string name="row122Surname" />
    <string name="row1Name" />
    <string name="row2Name" />
    <string name="row2Age" />
    <string name="row2Surname" />
    <string name="row3Name" />
    <string name="row3Age" />
    <string name="row3Surname" />
    <string name="col1" />
    <string name="col2" />
    <string name="col3" />
    <string name="TextoRegistro">Ingrese los siguietes datos</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="Telefono">Telefono</string>
    <string name="Direccion">Direccion</string>
    <string name="Confirmar">Confirmar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="EDITAR">EDITAR</string>

</resources>