<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context=".reservas_pendientes">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="403dp"
        android:layout_height="336dp"
        android:layout_margin="40dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="167dp">

        <!-- Table Heading -->

        <TableRow android:background="@color/purple_500">

            <TextView
                android:layout_width="42dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col1"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                tools:text="CARRO" />

            <TextView
                android:layout_width="54dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col2"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                tools:text="FECHA" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col3"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                tools:text="COSTO" />


        </TableRow>

        <!-- Table Data -->

        <TableRow>

            <TextView
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row1Name"
                android:textSize="16sp"
                tools:text="AVEO" />

            <TextView
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row1Age"
                android:textSize="16sp"
                tools:text="01/07/2022" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row1Surname"
                android:textSize="16sp"
                tools:text="340" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="54dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row2Name"
                android:textSize="16sp"
                tools:text="TESLA" />

            <TextView
                android:layout_width="81dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row2Age"
                android:textSize="16sp"
                tools:text="04/07/2022" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row2Surname"
                android:textSize="16sp"
                tools:text="600" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="30dp"
                android:layout_height="52dp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row3Name"
                android:textSize="12sp" />

            <TextView
                android:layout_width="46dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row3Age"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/row3Surname"
                android:textSize="12sp" />

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="Reservas Pendientes"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="176dp"
        android:layout_height="74dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="92dp"
        android:text="Confirmar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnborrar"
        android:layout_width="130dp"
        android:layout_height="71dp"
        android:text="Borrar"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toEndOf="@+id/button"
        tools:layout_editor_absoluteY="595dp" />

</androidx.constraintlayout.widget.ConstraintLayout>